[package]
name = "leo-interpreter"
version = "2.3.0"
authors = [ "The Leo Team <leo@provable.com>" ]
description = "Interpreter for the Leo programming language"
homepage = "https://leo-lang.org"
repository = "https://github.com/ProvableHQ/leo"
keywords = [
  "aleo",
  "cryptography",
  "leo",
  "programming-language",
  "zero-knowledge"
]
categories = [ "compilers", "cryptography", "web-programming" ]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "GPL-3.0"
edition = "2021"
rust-version = "1.69"

[dependencies.snarkvm-circuit]
version = "1.0.0"

[dependencies.snarkvm]
workspace = true

[dependencies.leo-ast]
workspace = true

[dependencies.leo-passes]
workspace = true

[dependencies.leo-errors]
workspace = true

[dependencies.leo-parser]
workspace = true

[dependencies.leo-span]
workspace = true

[dependencies.colored]
workspace = true

[dependencies.indexmap]
workspace = true
